fix ugly scrollbar on fucking windows

--- a/src1/assets/styles/main.styl
+++ b/src1/assets/styles/main.styl
@@ -12,4 +12,6 @@ body
 
 .wrapper
   height 100%
-  overflow scroll
+
+.scroll
+  overflow-y scroll
