--- a/src1/assets/styles/playlist.styl
+++ b/src1/assets/styles/playlist.styl
@@ -1,7 +1,8 @@
 #playlist
   background-color containerBackground
   padding 15px
-  overflow scroll
+  overflow-y scroll
+  height 100%
 
   .track
     padding 10px
